[package]
name = "rust-bitcoin-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.16.0"
bitcoincore-rpc-json = "0.16.0"
serde = "1.0.144"
serde_json = "1.0"
ticker = "0.1.1"
log = "0.4.17"
env_logger = "0.9.0"
error = "0.1.9"
jsonrpc = "0.13.0"


